# mozim-clib

./: .gitignore  Cargo.toml  Makefile
.cargo/: config.toml
src/: client.rs  config.rs  event.rs  lease.rs  lib.rs  logger.rs  mozim.h.in  mozim.pc.in
src/tests/: mozim_test.c  test_env_setup.sh
