[package]
name = "mozim-clib"
description = "C binding of mozim DHCP client"
version = "0.1.0"
authors = ["Gris Ge <fge@redhat.com>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "mozim"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
mozim = { version="0.2", path = "../mozim" }
log = "0.4.17"
once_cell = "1.16.0"
